--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 #Andrp35.github.io_
-
+theme:jekll-theme-slate
 ##Liandro Gabriel D. Ruiz From 9-Ogilvie
 
 ![image](https://github.com/Andrp35/Andrp35.github.io_/assets/152255052/1dae70c1-a75f-4f7c-96ca-35120102f380)
